syntax = 'proto3';

package api;

import "google/protobuf/timestamp.proto";
import "k8s.io/api/core/v1/generated.proto";
import "k8s.io/apimachinery/pkg/api/resource/generated.proto";
import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "google/protobuf/empty.proto";

message Job {
    string Id = 1;
    string JobSetId = 2;
    string Queue = 3;
    double Priority = 4;
    k8s.io.api.core.v1.PodSpec PodSpec = 5;
    google.protobuf.Timestamp Created = 6 [(gogoproto.stdtime) = true, (gogoproto.nullable) = false];
}

message LeaseRequest {
    string ClusterId = 1;
    map<string, k8s.io.apimachinery.pkg.api.resource.Quantity> Resources = 2 [(gogoproto.nullable) = false];
}

message JobLease {
    repeated Job Job = 1;
}

message IdList {
    repeated string Ids = 1;
}

message RenewLeaseRequest {
    string ClusterId = 1;
    repeated string Ids = 2;
}

message ReturnLeaseRequest {
    string ClusterId = 1;
    string JobId = 2;
}

service AggregatedQueue {
    rpc LeaseJobs (LeaseRequest) returns (JobLease);
    rpc RenewLease (RenewLeaseRequest) returns (IdList);
    rpc ReturnLease (ReturnLeaseRequest) returns (google.protobuf.Empty);
    rpc ReportDone (IdList) returns (IdList);
}
